--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,15 @@
 			font-family: 'Helvetica Neue', Arial, sans-serif;
 		}
 	</style>
+	<link rel="apple-touch-icon" sizes="180x180" href="/fav/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/fav/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/fav/favicon-16x16.png">
+	<link rel="icon" href="/fav/favicon.ico">
+
 	<link rel="stylesheet" href="./bundles/main.css">
 </head>
 <body>
 	<app-entry class="full"></app-entry>
-	<!-- <lok-lok-element active>
-		<h1 slot="heading">Hello, World!</h1>
-		<p slot="description">Lorem ipsum dolor sit amet</p>
-	</lok-lok-element> -->
 	<script type="module" src='./bundles/main.js'></script>
 </body>
 </html>
