--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="/fav/favicon-16x16.png">
 	<link rel="icon" href="/fav/favicon.ico">
 
-	<link rel="stylesheet" href="./bundles/main.css">
+	<link rel="stylesheet" href="/bundles/main.css">
 </head>
 <body>
 	<app-entry class="full"></app-entry>
-	<script type="module" src='./bundles/main.js'></script>
+	<script type="module" src='/bundles/main.js'></script>
 </body>
 </html>
